更新分类标签，增加一些文章
Signed-off-by: sjl3110 <2823626197@qq.com>

--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -1,10 +1,10 @@
 <footer class="mt-5">
   <div class="text-center py-3">
     <div>
-      <a target="_blank" rel="nofollow noopener"><span>Jianliang Shen</span></a>
+      <a target="_blank" rel="nofollow noopener"><span>Blog Loving</span></a>
       <i class="iconfont icon-love"></i>
       <a target="_blank" rel="nofollow noopener">
-        <span>2023</span></a>
+        <span>2024</span></a>
     </div>
     <%- partial('_partial/statistics.ejs') %>
     <%- partial('_partial/beian.ejs') %>
